--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,8 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+elegso.tilda/
+fix_loaders_and_tag.sh
+package.json
+package-lock.json
